// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon The next prop forces using the new icon set 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
  />
</svg>
`;

exports[`Icon ac renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M22,11h-4.2L21,7.8l-1.4-1.4L15,11h-2V9l4.7-4.7l-1.4-1.4L13,6.2V2h-2v4.2L7.8,2.9L6.3,4.3L11,9v2H9L4.3,6.3
  	L2.9,7.8L6.2,11H2v2h4.2L3,16.2l1.4,1.4L9,13h2v2l-4.7,4.7l1.4,1.4l3.3-3.3V22h2v-4.2l3.2,3.2l1.4-1.4L13,15v-2h2l4.7,4.7l1.4-1.4
  	L17.8,13H22V11z"
  />
</svg>
`;

exports[`Icon accessible renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19,13v-2c-1.5,0-3.1-0.8-4.1-1.8l-1.3-1.5c-0.1-0.1-0.3-0.3-0.6-0.4l0,0l0,0
  	C12.7,7.1,12.2,7,11.8,7c-1,0.1-1.8,1-1.8,2.1V15c0,1.1,0.9,2,2,2h5v5h2v-5.5c0-1.1-0.9-2-2-2h-3v-3.4C15.3,12.1,17.2,13,19,13z
  	 M12.8,18h2.1c-0.5,2.3-2.5,4-4.9,4c-2.8,0-5-2.2-5-5c0-2.4,1.7-4.4,4-4.9v2.1c-1.2,0.4-2,1.5-2,2.8c0,1.7,1.3,3,3,3
  	C11.3,20,12.4,19.2,12.8,18z M12,6c-1.1,0-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2S13.1,6,12,6z"
  />
</svg>
`;

exports[`Icon add renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M13,7h-2v4H7v2h4v4h2v-4h4v-2h-4V7z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10
  	S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
  />
</svg>
`;

exports[`Icon allInclusive renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.8,13.1l2.8-2.8l-7-7C2,4.9,2,7.4,3.6,9L7.8,13.1L7.8,13.1z M14.6,11.3
  	c1.5,0.7,3.7,0.2,5.3-1.4c1.9-1.9,2.2-4.6,0.8-6.1c-1.5-1.5-4.2-1.1-6.1,0.8c-1.6,1.6-2.1,3.7-1.4,5.3l-9.8,9.8l1.4,1.4l6.9-6.9
  	l6.9,6.9l1.4-1.4l-6.9-6.9L14.6,11.3z"
  />
</svg>
`;

exports[`Icon arrival renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M2.5,19.5h19v2h-19V19.5z M9.7,13.8L14,15l5.3,1.4c0.8,0.2,1.6-0.3,1.8-1.1
  	c0.2-0.8-0.3-1.6-1.1-1.8l-5.3-1.4l-2.8-9l-1.8-0.6v8.3l-5-1.3L4.2,7.1L2.8,6.7v5.2l1.6,0.4L9.7,13.8z"
  />
</svg>
`;

exports[`Icon arrowDown renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,12l-1.4-1.4L13,16.2V4h-2v12.2l-5.6-5.6L4,12l8,8L20,12z"
  />
</svg>
`;

exports[`Icon arrowLeft renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,11H7.8l5.6-5.6L12,4l-8,8l8,8l1.4-1.4L7.8,13H20V11z"
  />
</svg>
`;

exports[`Icon arrowRight renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,4l-1.4,1.4l5.6,5.6H4v2h12.2l-5.6,5.6L12,20l8-8L12,4z"
  />
</svg>
`;

exports[`Icon arrowUp renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M4,12l1.4,1.4L11,7.8V20h2V7.8l5.6,5.6L20,12l-8-8L4,12z"
  />
</svg>
`;

exports[`Icon attention renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 22 19"
  width={24}
>
  <path
    d="M12,12H10V8h2Zm0,4H10V14h2ZM0,19H22L11,0Z"
  />
</svg>
`;

exports[`Icon automatic renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M14.3,15.3H16L12.9,8h-1.7L8,15.3h1.7l0.6-1.4h3.4L14.3,15.3z M10.8,12.6L12,9.7l1.2,2.8h-2.4
  	V12.6z"
  />
</svg>
`;

exports[`Icon bed renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7,12.5c1.7,0,3-1.3,3-3s-1.3-3-3-3s-3,1.3-3,3S5.3,12.5,7,12.5z M19,6.5h-8v7H3v-9H1v15h2v-3
  	h18v3h2v-9C23,8.3,21.2,6.5,19,6.5z"
  />
</svg>
`;

exports[`Icon box renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6,5C5.4,5,5,5.4,5,6v12c0,0.6,0.4,1,1,1h12c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1H6z M6,3h12
  	c1.7,0,3,1.3,3,3v12c0,1.7-1.3,3-3,3H6c-1.7,0-3-1.3-3-3V6C3,4.3,4.3,3,6,3z"
  />
</svg>
`;

exports[`Icon boxChecked renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6,3h12c1.7,0,3,1.3,3,3v12c0,1.7-1.3,3-3,3H6c-1.7,0-3-1.3-3-3V6C3,4.3,4.3,3,6,3z M10,17
  	l9-8.6L17.6,7L10,14.3l-3.6-3.5L5,12.2L10,17z"
  />
</svg>
`;

exports[`Icon boxMinus renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6,5C5.4,5,5,5.4,5,6v12c0,0.6,0.4,1,1,1h12c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1H6z M6,3h12
  	c1.7,0,3,1.3,3,3v12c0,1.7-1.3,3-3,3H6c-1.7,0-3-1.3-3-3V6C3,4.3,4.3,3,6,3z M7,11v2h10v-2H7z"
  />
</svg>
`;

exports[`Icon boxPlus renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6,5C5.4,5,5,5.4,5,6v12c0,0.6,0.4,1,1,1h12c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1H6z M6,3h12
  	c1.7,0,3,1.3,3,3v12c0,1.7-1.3,3-3,3H6c-1.7,0-3-1.3-3-3V6C3,4.3,4.3,3,6,3z M13,7h-2v4H7v2h4v4h2v-4h4v-2h-4V7z"
  />
</svg>
`;

exports[`Icon breakfast renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19,3H3v10c0,2.2,1.8,4,4,4h6c2.2,0,4-1.8,4-4v-3h2c1.1,0,2-0.9,2-2V5C21,3.9,20.1,3,19,3z
  	 M19,8h-2V5h2V8z M3,19h16v2H3V19z"
  />
</svg>
`;

exports[`Icon build renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M22.7,19l-9.1-9.1c0.9-2.3,0.4-5-1.5-6.9c-2-2-5-2.4-7.4-1.3L9,6L6,9L1.6,4.7
  	c-1.2,2.4-0.7,5.4,1.3,7.4c1.9,1.9,4.6,2.4,6.9,1.5l9.1,9.1c0.4,0.4,1,0.4,1.4,0l2.3-2.3C23.1,20,23.1,19.3,22.7,19z"
  />
</svg>
`;

exports[`Icon business renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10,16v-1H3v4c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2v-4h-7v1H10z M20,7h-4V5l-2-2h-4L8,5v2H4
  	C2.9,7,2,7.9,2,9v3c0,1.1,0.9,2,2,2h6v-2h4v2h6c1.1,0,2-0.9,2-2V9C22,7.9,21.1,7,20,7z M14,7h-4V5h4V7z"
  />
</svg>
`;

exports[`Icon businessSeat renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M5.3,6.1C4.5,5.5,4.2,4.3,4.9,3.4c0.6-0.9,1.9-1.1,2.8-0.5c0.9,0.6,1.1,1.8,0.4,2.8
  	C7.5,6.6,6.3,6.8,5.3,6.1L5.3,6.1z M16,19.5H8.9c-1.5,0-2.7-1.1-3-2.5L4,7.5H2l2,9.8c0.4,2.4,2.5,4.2,4.9,4.2H16V19.5z M16.2,15.5
  	h-4.8l-1-4.1c1.6,0.9,3.3,1.5,5.2,1.2v-2.1c-1.8,0.3-3.6-0.3-4.8-1.3L9.1,8C8.9,7.8,8.7,7.7,8.4,7.6c-0.3-0.1-0.7-0.1-1-0.1l0,0
  	c-1.2,0.2-2,1.4-1.8,2.6L7,16c0.2,1.5,1.4,2.5,2.8,2.5h6.9l3.8,3L22,20L16.2,15.5z"
  />
</svg>
`;

exports[`Icon calendar renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 23 25"
  width={24}
>
  <path
    d="M22 3h-4v2h-2v-2h-9v2h-2v-2h-4c-0.552 0-1 0.449-1 1v2h23v-2c0-0.551-0.447-1-1-1zM0 24c0 0.553 0.448 1 1 1h21c0.553 0 1-0.447 1-1v-17h-23v17zM17 9h4v4h-4v-4zM17 14h4v4h-4v-4zM17 19h4v4h-4v-4zM12 9h4v4h-4v-4zM12 14h4v4h-4v-4zM12 19h4v4h-4v-4zM7 9h4v4h-4v-4zM7 14h4v4h-4v-4zM7 19h4v4h-4v-4zM2 9h4v4h-4v-4zM2 14h4v4h-4v-4zM2 19h4v4h-4v-4zM5 0h2v5h-2zM16 0h2v5h-2z"
  />
</svg>
`;

exports[`Icon car renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18.9,5c-0.2-0.6-0.8-1-1.4-1h-11C5.8,4,5.3,4.4,5.1,5L3,11v8c0,0.6,0.4,1,1,1h1
  	c0.5,0,1-0.4,1-1v-1h12v1c0,0.6,0.4,1,1,1h1c0.5,0,1-0.4,1-1v-8L18.9,5z M6.5,15C5.7,15,5,14.3,5,13.5S5.7,12,6.5,12S8,12.7,8,13.5
  	S7.3,15,6.5,15z M17.5,15c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5S18.3,15,17.5,15z M5,10l1.5-4.5h11L19,10H5z"
  />
</svg>
`;

exports[`Icon carDoor renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18,2h-6.9l0,0c-0.7,0-1.3,0.3-1.7,0.9l-5,7.6l0,0C4.1,10.8,4,11.2,4,11.6V20c0,1.1,0.9,2,2,2
  	h12c1.1,0,2-0.9,2-2V4C20,2.9,19.1,2,18,2z M18,11H6.7l4.7-7H18V11z"
  />
</svg>
`;

exports[`Icon chart renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19,3H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V5C21,3.9,20.1,3,19,3z M9,17H7
  	v-7h2V17z M13,17h-2V7h2V17z M17,17h-2v-4h2V17z"
  />
</svg>
`;

exports[`Icon chat renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,2H4C2.9,2,2,2.9,2,4v18l4-4h14c1.1,0,2-0.9,2-2V4C22,2.9,21.1,2,20,2z M6,9h12v2H6V9z
  	 M14,14H6v-2h8V14z M18,8H6V6h12V8z"
  />
</svg>
`;

exports[`Icon check renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 20 15"
  width={24}
>
  <path
    d="M9.26 12.53l10.188-9.55a1.657 1.657 0 0 0 0-2.469c-.736-.681-1.93-.681-2.665 0l-10.188 9.55-3.378-3.13c-.735-.682-1.93-.682-2.665 0a1.657 1.657 0 0 0 0 2.469l3.379 3.13L6.595 15l2.665-2.47z"
  />
</svg>
`;

exports[`Icon chevronDown renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 20 11"
  width={24}
>
  <path
    d="M19.998 1.074a.995.995 0 0 0-.437-.836 1.21 1.21 0 0 0-.76-.234 1.113 1.113 0 0 0-.784.368l-7.783 8L1.917.308C1.49-.102.744-.102.319.306.116.5 0 .78 0 1.074c0 .293.116.571.32.767l9.13 8.85c.204.196.495.309.8.309.34 0 .643-.14.843-.387L19.69 1.83c.197-.194.31-.47.31-.757h-.002z"
  />
</svg>
`;

exports[`Icon chevronLeft renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 10 17"
  width={24}
>
  <path
    d="M8.622.5c.28 0 .528.13.684.35.132.178.2.393.19.61-.01.242-.12.47-.3.626L2.65 8.313l6.598 6.654c.336.34.336.938.002 1.278-.16.162-.39.255-.628.255-.24 0-.468-.093-.627-.255L.753 8.94C.593 8.778.5 8.545.5 8.3c0-.272.115-.514.317-.674L8.002.748C8.162.59 8.387.5 8.622.5z"
  />
</svg>
`;

exports[`Icon chevronLight still renders old renamed icons 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
  />
</svg>
`;

exports[`Icon chevronRight renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.2220938,22.9995646 C6.83643819,23.0103989 6.47329678,22.8183931 6.26511274,22.4935747 C6.08199062,22.2543963 5.98856879,21.9585605 6.00111796,21.6575912 C6.01571494,21.3260766 6.16705223,21.0154369 6.41910969,20.7996082 L15.5709286,12.2417775 L6.353111,3.11195821 C5.88378695,2.61916796 5.88378695,1.84478328 6.353111,1.35199303 C6.84590125,0.882668989 7.62028592,0.882668989 8.11307617,1.35199303 L18.2328759,11.3947943 C18.4618224,11.6301217 18.588363,11.9464732 18.5848689,12.2747769 C18.5991343,12.6363979 18.4346102,12.9818985 18.1448776,13.1987586 L8.10207639,22.6585714 C7.8677196,22.8808196 7.55605606,23.003118 7.23309358,22.9995646 L7.23309358,22.9995646 L7.2220938,22.9995646 Z"
  />
</svg>
`;

exports[`Icon chevronThick still renders old renamed icons 1`] = `null`;

exports[`Icon chevronUp renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.4,15.4l4.6-4.6l4.6,4.6L18,14l-6-6l-6,6L7.4,15.4z"
  />
</svg>
`;

exports[`Icon cityView renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15,11.5v-6l-3-3l-3,3v2H3v14h18v-10H15z M7,19.5H5v-2h2V19.5z M7,15.5H5v-2h2V15.5z M7,11.5H5
  	v-2h2V11.5z M13,19.5h-2v-2h2V19.5z M13,15.5h-2v-2h2V15.5z M13,11.5h-2v-2h2V11.5z M13,7.5h-2v-2h2V7.5z M19,19.5h-2v-2h2V19.5z
  	 M19,15.5h-2v-2h2V15.5z"
  />
</svg>
`;

exports[`Icon clock renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10c5.5,0,10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8
  	s8,3.6,8,8S16.4,20,12,20z M12.5,12.2l4.5,2.7l-0.8,1.2L11,13V7h1.5V12.2z"
  />
</svg>
`;

exports[`Icon close renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19,6.4L17.6,5L12,10.6L6.4,5L5,6.4l5.6,5.6L5,17.6L6.4,19l5.6-5.6l5.6,5.6l1.4-1.4L13.4,12L19,6.4z"
  />
</svg>
`;

exports[`Icon cloud renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18.1,10C17.6,7.2,15,5,12,5C9.6,5,7.5,6.4,6.5,8.4C4,8.6,2,10.8,2,13.3c0,2.8,2.2,5,5,5h10.8
  	c2.3,0,4.2-1.9,4.2-4.2C22,12,20.3,10.2,18.1,10z M17.8,16.7H7c-1.8,0-3.3-1.5-3.3-3.3S5.2,10,7,10h0.6C8.1,8.1,9.9,6.7,12,6.7
  	c2.5,0,4.6,2.1,4.6,4.6v0.4h1.2c1.4,0,2.5,1.1,2.5,2.5S19.2,16.7,17.8,16.7z"
  />
</svg>
`;

exports[`Icon coupon renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21.4,11.6l-9-9C12.1,2.2,11.6,2,11,2H4C2.9,2,2,2.9,2,4v7c0,0.6,0.2,1.1,0.6,1.4l9,9c0.4,0.4,0.9,0.6,1.4,0.6
  	s1.1-0.2,1.4-0.6l7-7c0.4-0.4,0.6-0.9,0.6-1.4S21.8,11.9,21.4,11.6z M5.5,7C4.7,7,4,6.3,4,5.5S4.7,4,5.5,4S7,4.7,7,5.5S6.3,7,5.5,7z
  	"
  />
</svg>
`;

exports[`Icon creditCard renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,4H4C2.9,4,2,4.9,2,6l0,12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,18H4v-6h16V18z
  	 M20,8H4V6h16V8z"
  />
</svg>
`;

exports[`Icon cruise renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 21c-1.39 0-2.78-.47-4-1.32-2.44 1.71-5.56 1.71-8 0C6.78 20.53 5.39 21 4 21H2v2h2c1.38 0 2.74-.35 4-.99 2.52 1.29 5.48 1.29 8 0 1.26.65 2.62.99 4 .99h2v-2h-2zM3.95 19H4c1.6 0 3.02-.88 4-2 .98 1.12 2.4 2 4 2s3.02-.88 4-2c.98 1.12 2.4 2 4 2h.05l1.89-6.68c.08-.26.06-.54-.06-.78s-.34-.42-.6-.5L20 10.62V6c0-1.1-.9-2-2-2h-3V1H9v3H6c-1.1 0-2 .9-2 2v4.62l-1.29.42c-.26.08-.48.26-.6.5s-.15.52-.06.78L3.95 19zM6 6h12v3.97L12 8 6 9.97V6z"
  />
</svg>
`;

exports[`Icon departure renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M2.5,19h19v2h-19V19z M22.1,9.6c-0.2-0.8-1-1.3-1.8-1.1L14.9,10L8,3.6L6.1,4.1l4.1,7.2l-5,1.3
  	L3.3,11l-1.5,0.4l1.8,3.2l0.8,1.3L6,15.5l5.3-1.4l4.3-1.2l5.4-1.4C21.8,11.3,22.3,10.4,22.1,9.6z"
  />
</svg>
`;

exports[`Icon description renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M14,2H6C4.9,2,4,2.9,4,4v16c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2V8L14,2z M16,18H8v-2h8V18z
  	 M16,14H8v-2h8V14z M13,9V3.5L18.5,9H13z"
  />
</svg>
`;

exports[`Icon devices renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M4.7,6.4h16.5V4.5H4.7c-1,0-1.8,0.8-1.8,1.9v10.3H1v2.8h12.8v-2.8H4.7V6.4z M22.1,8.2h-5.5
  	c-0.5,0-0.9,0.4-0.9,0.9v9.4c0,0.5,0.4,0.9,0.9,0.9h5.5c0.5,0,0.9-0.4,0.9-0.9V9.2C23,8.7,22.6,8.2,22.1,8.2z M21.2,16.7h-3.7v-6.6
  	h3.7V16.7z"
  />
</svg>
`;

exports[`Icon dollar renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 12 20"
  width={24}
>
  <path
    d="M3.684 14.653c.445.485.998.793 1.659.925v-4.599a3.69 3.69 0 0 0-.29-.099 4.76 4.76 0 0 0-.4-.099 17.068 17.068 0 0 1-1.572-.517 5.102 5.102 0 0 1-1.39-.792c-.41-.33-.736-.74-.98-1.232C.468 7.749.346 7.136.346 6.403c0-.748.14-1.409.42-1.98.28-.573.65-1.053 1.11-1.442.46-.388.99-.689 1.594-.902a7.054 7.054 0 0 1 1.874-.385V0h1.271v1.694a7.631 7.631 0 0 1 1.82.43 4.872 4.872 0 0 1 1.498.88c.431.373.783.84 1.055 1.396.273.558.431 1.218.474 1.98H8.402c-.014-.586-.194-1.085-.538-1.496-.345-.41-.762-.616-1.25-.616v3.895l.528.132c.18.044.37.095.57.154 1.064.293 1.882.656 2.457 1.089.575.433.998.884 1.27 1.353.274.47.436.94.486 1.408.05.47.075.888.075 1.254 0 .323-.08.73-.237 1.221-.158.493-.442.973-.851 1.441-.41.47-.959.888-1.648 1.254-.69.367-1.572.587-2.65.66V20H5.343v-1.87c-1.609-.118-2.865-.623-3.77-1.518C.668 15.718.143 14.404 0 12.673h3.038c-.015.836.201 1.496.646 1.98zm.948-10.275c-.23.074-.439.187-.625.341a1.634 1.634 0 0 0-.441.573 1.86 1.86 0 0 0-.162.803c0 .484.15.858.452 1.122.302.264.798.477 1.487.638V4.268c-.244 0-.481.037-.711.11zm2.79 11.013c.28-.095.532-.23.754-.408.222-.176.406-.392.55-.649.143-.257.215-.56.215-.913 0-.572-.177-1-.528-1.287-.352-.286-.952-.546-1.799-.78v4.224a3.9 3.9 0 0 0 .808-.187z"
  />
</svg>
`;

exports[`Icon economySeat renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.6,5.4c-0.8-0.8-0.8-2,0-2.8s2-0.8,2.8,0s0.8,2.1,0,2.8C9.6,6.2,8.4,6.2,7.6,5.4z M6,16V7H4v9
  	c0,2.8,2.2,5,5,5h6v-2H9C7.3,19,6,17.7,6,16z M20,20.1L14.9,15h-3.4v-3.7c1.4,1.2,3.6,2.2,5.5,2.2v-2.2c-1.7,0-3.6-0.9-4.7-2
  	l-1.4-1.6c-0.2-0.2-0.4-0.4-0.7-0.5C9.9,7.1,9.6,7,9.3,7l0,0C8,7,7,8,7,9.2V15c0,1.7,1.3,3,3,3h5.1l3.5,3.5L20,20.1z"
  />
</svg>
`;

exports[`Icon edit renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3,17.2V21h3.8l11-11.1L14,6.1L3,17.2z M20.7,7c0.4-0.4,0.4-1,0-1.4l-2.3-2.3
  	c-0.4-0.4-1-0.4-1.4,0l-1.8,1.8L19,8.9L20.7,7z"
  />
</svg>
`;

exports[`Icon electric renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7,2v11h3v9l7-12h-4l4-8H7z"
  />
</svg>
`;

exports[`Icon email renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
  	l-8,5L4,8V6l8,5l8-5V8z"
  />
</svg>
`;

exports[`Icon filter renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10,18h4v-2h-4V18z M3,6v2h18V6H3z M6,13h12v-2H6V13z"
  />
</svg>
`;

exports[`Icon fitness renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20.6,14.9l1.4-1.4L20.6,12L17,15.6L8.4,7L12,3.4L10.6,2L9.1,3.4L7.7,2L5.6,4.1L4.1,2.7L2.7,4.1l1.4,1.4L2,7.7
  	l1.4,1.4L2,10.6L3.4,12L7,8.4l8.6,8.6L12,20.6l1.4,1.4l1.4-1.4l1.4,1.4l2.1-2.1l1.4,1.4l1.4-1.4l-1.4-1.4l2.1-2.1L20.6,14.9z"
  />
</svg>
`;

exports[`Icon gallery renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M22,16V4c0-1.1-0.9-2-2-2H8C6.9,2,6,2.9,6,4v12c0,1.1,0.9,2,2,2h12C21.1,18,22,17.1,22,16z M11,12l2,2.7l3-3.7
  	l4,5H8L11,12z M2,6v14c0,1.1,0.9,2,2,2h14v-2H4V6H2z"
  />
</svg>
`;

exports[`Icon gas renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19.3,7.2L19.3,7.2l-3.7-3.7l-1.1,1.1l2.1,2.1C15.7,7,15,7.9,15,9c0,1.4,1.1,2.5,2.5,2.5
  	c0.4,0,0.7-0.1,1-0.2v7.2c0,0.5-0.4,1-1,1s-1-0.5-1-1V14c0-1.1-0.9-2-2-2h-1V5c0-1.1-0.9-2-2-2h-6c-1.1,0-2,0.9-2,2v16h10v-7.5H15v5
  	c0,1.4,1.1,2.5,2.5,2.5s2.5-1.1,2.5-2.5V9C20,8.3,19.7,7.7,19.3,7.2z M11.5,10h-6V5h6V10z M17.5,10c-0.6,0-1-0.4-1-1s0.4-1,1-1
  	s1,0.4,1,1S18.1,10,17.5,10z"
  />
</svg>
`;

exports[`Icon globe renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M18.9,8H16
  	c-0.3-1.2-0.8-2.5-1.4-3.6C16.4,5.1,18,6.3,18.9,8z M12,4c0.8,1.2,1.5,2.5,1.9,4h-3.8C10.5,6.6,11.2,5.2,12,4z M4.3,14
  	C4.1,13.4,4,12.7,4,12s0.1-1.4,0.3-2h3.4c-0.1,0.7-0.1,1.3-0.1,2s0.1,1.3,0.1,2H4.3z M5.1,16h3c0.3,1.2,0.8,2.5,1.4,3.6
  	C7.6,18.9,6,17.7,5.1,16L5.1,16z M8,8H5c1-1.7,2.5-2.9,4.3-3.6C8.8,5.5,8.3,6.8,8,8L8,8z M12,20c-0.8-1.2-1.5-2.5-1.9-4h3.8
  	C13.5,17.4,12.8,18.8,12,20z M14.3,14H9.7c-0.1-0.7-0.2-1.3-0.2-2s0.1-1.4,0.2-2h4.7c0.1,0.6,0.2,1.3,0.2,2S14.4,13.3,14.3,14z
  	 M14.6,19.6c0.6-1.1,1.1-2.3,1.4-3.6h2.9C18,17.6,16.4,18.9,14.6,19.6L14.6,19.6z M16.4,14c0.1-0.7,0.1-1.3,0.1-2s-0.1-1.3-0.1-2
  	h3.4c0.2,0.6,0.3,1.3,0.3,2s-0.1,1.4-0.3,2H16.4z"
  />
</svg>
`;

exports[`Icon gps renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,8c-2.2,0-4,1.8-4,4s1.8,4,4,4s4-1.8,4-4S14.2,8,12,8z M20.9,11c-0.5-4.2-3.8-7.5-7.9-7.9V1h-2v2.1
  	C6.8,3.5,3.5,6.8,3.1,11H1v2h2.1c0.5,4.2,3.8,7.5,7.9,7.9V23h2v-2.1c4.2-0.5,7.5-3.8,7.9-7.9H23v-2C23,11,20.9,11,20.9,11z M12,19
  	c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S15.9,19,12,19z"
  />
</svg>
`;

exports[`Icon graph renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3.5,18.5l6-6l4,4L22,6.9l-1.4-1.4l-7.1,8l-4-4L2,17L3.5,18.5z"
  />
</svg>
`;

exports[`Icon guests renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M16.5,12c1.4,0,2.5-1.1,2.5-2.5S17.9,7,16.5,7S14,8.1,14,9.5S15.1,12,16.5,12z M9,11
  	c1.7,0,3-1.3,3-3s-1.3-3-3-3S6,6.3,6,8S7.3,11,9,11z M16.5,14c-1.8,0-5.5,0.9-5.5,2.8V19h11v-2.2C22,14.9,18.3,14,16.5,14z M9,13
  	c-2.3,0-7,1.2-7,3.5V19h7v-2.2c0-0.9,0.3-2.3,2.4-3.5C10.5,13.1,9.7,13,9,13z"
  />
</svg>
`;

exports[`Icon help renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,19h-2v-2h2V19z M15.1,11.2
  	l-0.9,0.9C13.4,12.9,13,13.5,13,15h-2v-0.5c0-1.1,0.4-2.1,1.2-2.8l1.2-1.3C13.8,10.1,14,9.6,14,9c0-1.1-0.9-2-2-2s-2,0.9-2,2H8
  	c0-2.2,1.8-4,4-4s4,1.8,4,4C16,9.9,15.6,10.7,15.1,11.2z"
  />
</svg>
`;

exports[`Icon home renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10,20.5v-6h4v6h5v-8h3l-10-9l-10,9h3v8H10z"
  />
</svg>
`;

exports[`Icon hotel renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 25"
  width={24}
>
  <path
    d="M12.826 0.002c0.003-0.001 0.003-0.001 0.006-0.002-0.002 0.001-0.004 0.001-0.006 0.002z M15.311 4.563v3.49l2.086 0.751v-3.294c0 0-0.763-1.173-2.086-0.947z M21.043 7.070c0 0-0.578-1.039-1.854-0.857v3.203l1.854 0.657v-3.003z M15.311 10.711c0 0.456 0.009 3.423 0.009 3.423l2.077 0.486v-3.191c0 0-0.718-1.059-2.086-0.717z M19.189 11.919v3.076l1.854 0.445 0.003-2.921c0 0.001-0.487-0.987-1.857-0.6z M15.311 16.797v3.402l2.086 0.238v-3.218c0-0.001-0.931-0.854-2.086-0.422z M19.189 17.523v3.071l1.854 0.171v-2.883c0 0-0.779-0.852-1.854-0.359z M3.358 24.96h2.579l0.008-3.455h-2.594z M6.372 18.558c0 0-4.751 0.007-4.807 0.007-0.17 0.013-0.602 0.078-0.978 0.385-0.301 0.247-0.495 0.722-0.586 1.313 0.354 0 7.745-0.004 8.102-0.004-0.091-0.581-0.287-1.046-0.588-1.285-0.499-0.397-1.135-0.417-1.142-0.417z M23.678 14.965c-0.010-2.192 0-4.381-0.015-6.060-0.009-0.839-0.023-1.551-0.051-2.078-0.013-0.266-0.030-0.484-0.053-0.662-0.050-0.197 0.009-0.27-0.211-0.578-0.221-0.233-0.481-0.376-0.858-0.59-1.106-0.605-3.078-1.47-4.762-2.264-2.308-1.086-4.206-1.909-4.448-2.013v-0.013l-0.011 0.008c-0.007-0.003-0.016-0.007-0.016-0.007l-0.010 0.023-9.699 6.248c0 0-0.12 0.079-0.153 0.156-0.031 0.075-0.039 0.189-0.039 0.189v10.256l3.287-0.004c0.036-0.002 1.464 0.001 2.296 1.162 0.396 0.553 0.506 1.398 0.506 1.516 0 0.117-0.001 0.232-0.003 0.314-0.004 0.179 0.003 4.418 0 4.43h14.163v-0.029l0.032 0.001c0-0.002 0.051-3.791 0.051-7.972-0.001-0.672-0.002-1.355-0.005-2.034zM22.544 22.793l-9.263-0.449v-20.411c0.727 0.318 2.23 0.986 3.975 1.806 1.133 0.535 2.389 1.097 3.406 1.582 0.509 0.242 0.957 0.465 1.295 0.649 0.224 0.12 0.405 0.238 0.497 0.306 0.052 0.348 0.097 1.519 0.102 2.958 0.011 1.621 0.003 3.674 0.012 5.736 0.003 0.677 0.004 1.359 0.004 2.030-0.001 2.212-0.015 4.307-0.028 5.793z"
  />
</svg>
`;

exports[`Icon hybrid renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17,7.5c-9,2-11.1,8.2-13.2,13.3l1.9,0.7l0.9-2.3c0.5,0.2,1,0.3,1.4,0.3c11,0,14-17,14-17c-1,2-8,2.2-13,3.2
  	s-7,5.2-7,7.2s1.8,3.8,1.8,3.8C7,7.5,17,7.5,17,7.5z"
  />
</svg>
`;

exports[`Icon information renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 20 20"
  width={24}
>
  <path
    d="M11,7H9V5h2Zm0,8H9V9h2ZM10,0A10,10,0,1,0,20,10,10,10,0,0,0,10,0Z"
  />
</svg>
`;

exports[`Icon informationOutline renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20
  	c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z"
  />
</svg>
`;

exports[`Icon key renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12.6,10.1C11.8,8,9.8,6.5,7.5,6.5C4.4,6.5,2,8.9,2,12s2.4,5.5,5.5,5.5c2.4,0,4.4-1.5,5.1-3.6h4
  	v3.6h3.6v-3.7H22v-3.7H12.6z M7.5,13.8c-1,0-1.8-0.8-1.8-1.8s0.8-1.8,1.8-1.8S9.3,11,9.3,12S8.5,13.8,7.5,13.8z"
  />
</svg>
`;

exports[`Icon laptop renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19.3,18c1,0,1.8-0.9,1.8-2V6c0-1.1-0.8-2-1.8-2H4.7c-1,0-1.8,0.9-1.8,2v10c0,1.1,0.8,2,1.8,2H1
  	v2h22v-2H19.3z M4.7,6h14.7v10H4.7V6z"
  />
</svg>
`;

exports[`Icon list renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3,13h2v-2H3V13z M3,17h2v-2H3V17z M3,9h2V7H3V9z M7,13h14v-2H7V13z M7,17h14v-2H7V17z M7,7v2
  	h14V7H7z"
  />
</svg>
`;

exports[`Icon lock renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18,8.5h-1v-2c0-2.8-2.2-5-5-5s-5,2.2-5,5v2H6c-1.1,0-2,0.9-2,2v10c0,1.1,0.9,2,2,2h12
  	c1.1,0,2-0.9,2-2v-10C20,9.4,19.1,8.5,18,8.5z M12,17.5c-1.1,0-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2S13.1,17.5,12,17.5z M15.1,8.5H8.9v-2
  	c0-1.7,1.4-3.1,3.1-3.1s3.1,1.4,3.1,3.1V8.5z"
  />
</svg>
`;

exports[`Icon luggage renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,6.5h-4v-2c0-1.1-0.9-2-2-2h-4c-1.1,0-2,0.9-2,2v2H4c-1.1,0-2,0.9-2,2v11c0,1.1,0.9,2,2,2h16
  	c1.1,0,2-0.9,2-2v-11C22,7.4,21.1,6.5,20,6.5z M14,6.5h-4v-2h4V6.5z"
  />
</svg>
`;

exports[`Icon manual renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M7.4,8h2l2.5,4.9L14.4,8h2v8h-1.6v-5.4l-2.3,4.6h-1.1l-2.3-4.6V16H7.4V8z"
  />
</svg>
`;

exports[`Icon map renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20.5,3h-0.2L15,5.1L9,3L3.4,4.9C3.2,5,3,5.2,3,5.4v15.1C3,20.8,3.2,21,3.5,21h0.2L9,18.9l6,2.1
  	l5.6-1.9c0.2-0.1,0.4-0.2,0.4-0.5V3.5C21,3.2,20.8,3,20.5,3z M15,19l-6-2.1V5l6,2.1V19z"
  />
</svg>
`;

exports[`Icon mileage renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,16c-1.7,0-3-1.3-3-3c0-1.1,0.6-2.1,1.5-2.6l9.7-5.6l-5.5,9.6C14.2,15.3,13.2,16,12,16L12,16
  	z M12,3c1.8,0,3.5,0.5,5,1.3l-2.1,1.2C14,5.2,13,5,12,5c-4.4,0-8,3.6-8,8c0,2.2,0.9,4.2,2.3,5.6l0,0c0.4,0.4,0.4,1,0,1.4
  	s-1,0.4-1.4,0l0,0C3.1,18.3,2,15.8,2,13C2,7.5,6.5,3,12,3L12,3z M22,13c0,2.8-1.1,5.3-2.9,7.1l0,0c-0.4,0.4-1,0.4-1.4,0
  	s-0.4-1,0-1.4l0,0c1.5-1.4,2.3-3.4,2.3-5.6c0-1-0.2-2-0.5-2.9L20.7,8C21.5,9.5,22,11.2,22,13z"
  />
</svg>
`;

exports[`Icon minus renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7,11v2h10v-2H7z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
  />
</svg>
`;

exports[`Icon overnight renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M16.1,9.1l0.6,2L15,9.9l-1.7,1.2l0.6-2l-1.7-1.3h2.1l0.7-2l0.7,2h2.1L16.1,9.1z M20.7,16.6
  	c-0.3,0.4-0.7,0.9-1.1,1.3c-3.9,3.9-10.2,3.9-14.1,0c-4-3.9-4-10.3-0.1-14.2c0.4-0.4,0.8-0.8,1.3-1.1C7.5,2.1,8.6,3,8.6,3.8
  	c-0.3,2.9,0.7,5.8,2.9,8s5.1,3.2,8,2.9C20.3,14.7,21.2,15.9,20.7,16.6z"
  />
</svg>
`;

exports[`Icon parking renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12.5,3h-7v18h4v-6h3c3.3,0,6-2.7,6-6S15.8,3,12.5,3z M12.7,11H9.5V7h3.2c1.1,0,2,0.9,2,2
  	S13.8,11,12.7,11z"
  />
</svg>
`;

exports[`Icon pets renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M4.5,11.5C3.1,11.5,2,10.4,2,9s1.1-2.5,2.5-2.5S7,7.6,7,9S5.9,11.5,4.5,11.5z M9,7.5
  	C7.6,7.5,6.5,6.4,6.5,5S7.6,2.5,9,2.5s2.5,1.1,2.5,2.5S10.4,7.5,9,7.5z M15,7.5c-1.4,0-2.5-1.1-2.5-2.5s1.1-2.5,2.5-2.5
  	s2.5,1.1,2.5,2.5S16.4,7.5,15,7.5z M19.5,11.5c-1.4,0-2.5-1.1-2.5-2.5s1.1-2.5,2.5-2.5S22,7.6,22,9S20.9,11.5,19.5,11.5z M17.3,14.4
  	L17.3,14.4c1.3,1.3,2.9,2.8,2.6,4.8c-0.3,1-1,2-2.3,2.3c-0.7,0.1-3.1-0.4-5.5-0.4h-0.2c-2.5,0-4.8,0.6-5.5,0.4
  	c-1.3-0.3-2-1.3-2.3-2.3c-0.3-2,1.3-3.5,2.6-4.8c0.9-1,1.6-1.9,2.5-2.9c0.5-0.5,1.1-1.1,1.8-1.3c0.1,0,0.2-0.1,0.3-0.1
  	C11.5,10,11.7,10,12,10s0.5,0,0.8,0c0.1,0,0.2,0.1,0.3,0.1c0.7,0.2,1.3,0.8,1.8,1.3C15.7,12.5,16.5,13.3,17.3,14.4z"
  />
</svg>
`;

exports[`Icon phone renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6.6,10.8c1.4,2.8,3.8,5.1,6.6,6.6l2.2-2.2c0.3-0.3,0.7-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6c0.5,0,1,0.4,1,1V20
  	c0,0.5-0.5,1-1,1C10.6,21,3,13.4,3,4c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.5,0.6,3.6c0.1,0.3,0,0.7-0.2,1L6.6,10.8z"
  />
</svg>
`;

exports[`Icon picture renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21,19V5c0-1.1-0.9-2-2-2H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14C20.1,21,21,20.1,21,19z M8.5,13.5l2.5,3
  	l3.5-4.5l4.5,6H5L8.5,13.5z"
  />
</svg>
`;

exports[`Icon pin renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C8.1,2,5,5.1,5,9c0,5.2,7,13,7,13s7-7.8,7-13C19,5.1,15.9,2,12,2z M12,11.5
  	c-1.4,0-2.5-1.1-2.5-2.5s1.1-2.5,2.5-2.5s2.5,1.1,2.5,2.5S13.4,11.5,12,11.5z"
  />
</svg>
`;

exports[`Icon plane renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21.5,16v-2l-8-5V3.5C13.5,2.7,12.8,2,12,2s-1.5,0.7-1.5,1.5V9l-8,5v2l8-2.5V19l-2,1.5V22l3.5-1
  	l3.5,1v-1.5l-2-1.5v-5.5L21.5,16z"
  />
</svg>
`;

exports[`Icon pool renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M22,21c-1.1,0-1.7-0.4-2.2-0.6c-0.4-0.2-0.6-0.4-1.1-0.4c-0.6,0-0.8,0.1-1.1,0.4
  	c-0.5,0.3-1.1,0.6-2.2,0.6s-1.7-0.4-2.2-0.6C12.8,20.1,12.6,20,12,20s-0.8,0.1-1.2,0.4c-0.4,0.2-1,0.6-2.1,0.6S7,20.6,6.5,20.4
  	C6.1,20.1,5.9,20,5.3,20s-0.8,0.1-1.1,0.4C3.7,20.6,3.1,21,2,21v-2c0.6,0,0.8-0.1,1.1-0.4C3.6,18.4,4.2,18,5.3,18s1.7,0.4,2.2,0.6
  	C7.9,18.9,8.1,19,8.7,19s0.8-0.1,1.2-0.4c0.4-0.2,1-0.6,2.1-0.6s1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.2,0.4s0.8-0.1,1.1-0.4
  	c0.4-0.3,1.1-0.6,2.2-0.6s1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.1,0.4C22,19,22,21,22,21z M22,16.5c-1.1,0-1.7-0.4-2.2-0.6
  	c-0.4-0.2-0.6-0.4-1.1-0.4c-0.6,0-0.8,0.1-1.1,0.4c-0.5,0.3-1.1,0.6-2.2,0.6s-1.7-0.4-2.2-0.6c-0.4-0.2-0.6-0.4-1.1-0.4
  	c-0.6,0-0.8,0.1-1.2,0.4c-0.4,0.3-1.1,0.6-2.2,0.6S7,16.1,6.5,15.9c-0.4-0.2-0.6-0.4-1.2-0.4s-0.8,0.1-1.1,0.4
  	c-0.5,0.3-1.1,0.6-2.2,0.6v-2c0.6,0,0.8-0.1,1.1-0.4c0.5-0.3,1.1-0.6,2.2-0.6s1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.1,0.4
  	c0.6,0,0.8-0.1,1.2-0.4c0.5-0.3,1.1-0.6,2.2-0.6s1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.1,0.4c0.6,0,0.8-0.1,1.2-0.4
  	c0.4-0.3,1.1-0.6,2.2-0.6s1.7,0.4,2.2,0.6c0.4,0.2,0.6,0.4,1.1,0.4V16.5L22,16.5z M8.7,12c-0.6,0-0.8-0.1-1.2-0.4
  	c-0.2-0.1-0.4-0.2-0.7-0.4L10,8L9,7C7.9,5.9,6.8,5.5,5,5.5V3c2.5,0,3.9,0.4,5.5,2l6.4,6.4c-0.1,0.1-0.3,0.2-0.4,0.2
  	c-0.4,0.3-0.6,0.4-1.2,0.4s-0.8-0.1-1.2-0.4c-0.4-0.2-1-0.6-2.1-0.6s-1.7,0.4-2.2,0.6C9.4,11.9,9.2,12,8.7,12z M16.5,8
  	C15.1,8,14,6.9,14,5.5S15.1,3,16.5,3S19,4.1,19,5.5S17.9,8,16.5,8z"
  />
</svg>
`;

exports[`Icon printer renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19,8H5c-1.7,0-3,1.3-3,3v6h4v4h12v-4h4v-6C22,9.3,20.7,8,19,8z M16,19H8v-5h8V19z M19,12
  	c-0.5,0-1-0.4-1-1s0.5-1,1-1s1,0.4,1,1S19.5,12,19,12z M18,3H6v4h12V3z"
  />
</svg>
`;

exports[`Icon quilt renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M9.4,19h5.3v-6.5H9.4V19z M3,19h5.3V5H3V19z M15.7,19H21v-6.5h-5.3V19z M9.4,5v6.5H21V5H9.4z"
  />
</svg>
`;

exports[`Icon radio renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
  	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
  />
</svg>
`;

exports[`Icon radioFilled renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,7c-2.8,0-5,2.2-5,5s2.2,5,5,5s5-2.2,5-5S14.8,7,12,7z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10
  	s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
  />
</svg>
`;

exports[`Icon refresh renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17.6,6.3C16.2,4.9,14.2,4,12,4c-4.4,0-8,3.6-8,8s3.6,8,8,8c3.7,0,6.8-2.6,7.7-6h-2.1c-0.8,2.3-3,4-5.6,4
  	c-3.3,0-6-2.7-6-6s2.7-6,6-6c1.7,0,3.1,0.7,4.2,1.8L13,11h7V4L17.6,6.3z"
  />
</svg>
`;

exports[`Icon restaurant renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11,9H9V2H7v7H5V2H3v7c0,2.1,1.7,3.8,3.8,4v9h2.5v-9c2-0.2,3.7-1.9,3.7-4V2h-2V9z M16,6v8h2.5v8
  	H21V2C18.2,2,16,4.2,16,6z"
  />
</svg>
`;

exports[`Icon search renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 20 20"
  width={24}
>
  <path
    d="M19.513 17.155l-4.786-4.786c-.055-.055-.117-.097-.175-.143a7.865 7.865 0 0 0 1.281-4.31A7.916 7.916 0 0 0 7.917 0a7.916 7.916 0 0 0 0 15.832c1.59 0 3.07-.473 4.312-1.28.046.057.088.12.142.173l4.784 4.787a1.667 1.667 0 1 0 2.358-2.357zM7.916 13.332A5.423 5.423 0 0 1 2.5 7.916 5.423 5.423 0 0 1 7.916 2.5a5.424 5.424 0 0 1 5.417 5.416 5.425 5.425 0 0 1-5.417 5.416z"
  />
</svg>
`;

exports[`Icon shuttle renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17,5H3C1.9,5,1,5.9,1,7v9h2c0,1.6,1.3,3,3,3s3-1.4,3-3h5.5c0,1.6,1.3,3,3,3s3-1.4,3-3H23v-5
  	L17,5z M3,11V7h4v4H3z M6,17.5c-0.8,0-1.5-0.7-1.5-1.5c0-0.8,0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5C7.5,16.8,6.8,17.5,6,17.5z M13,11H9V7
  	h4V11z M17.5,17.5c-0.8,0-1.5-0.7-1.5-1.5c0-0.8,0.7-1.5,1.5-1.5S19,15.2,19,16C19,16.8,18.3,17.5,17.5,17.5z M15,11V7h1l4,4H15z"
  />
</svg>
`;

exports[`Icon smoking renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M2,5.5l7,7H2v3h10l7,7l1.3-1.2l-17-17L2,5.5z M20.5,12.5H22v3h-1.5V12.5z M18,12.5h1.5v3H18
  	V12.5z M18.9,4.4c0.6-0.6,1-1.5,1-2.4h-1.5c0,1-0.8,1.8-1.9,1.8v1.5c2.2,0,4,1.8,4,4.1v2.1H22V9.4C22,7.2,20.7,5.3,18.9,4.4z
  	 M14.5,8.2H16c1.1,0,2,0.7,2,2.1v1.2h1.5V9.9c0-1.8-1.6-3.2-3.5-3.2h-1.5c-1,0-1.9-1-1.9-2s0.8-1.8,1.9-1.8V1.5
  	c-1.9,0-3.4,1.5-3.4,3.3S12.6,8.2,14.5,8.2z M17,15.4v-2.9h-2.9L17,15.4z"
  />
</svg>
`;

exports[`Icon spa renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15.5,9.6c-0.2-2.8-1.3-5.5-3.4-7.6C9.9,4.1,8.7,6.9,8.5,9.6c1.3,0.7,2.5,1.6,3.5,2.7
  	C13,11.2,14.2,10.3,15.5,9.6L15.5,9.6z M9,12.3c-0.1-0.1-0.3-0.2-0.4-0.3C8.7,12.1,8.8,12.2,9,12.3z M15.4,12
  	c-0.1,0.1-0.3,0.2-0.4,0.3C15.1,12.2,15.3,12.1,15.4,12z M12,15.4C9.8,12.2,6.2,10,2,10c0,5.3,3.4,9.8,8,11.5c0.6,0.2,1.3,0.4,2,0.5
  	c0.7-0.1,1.3-0.3,2-0.5c4.7-1.7,8-6.2,8-11.5C17.8,10,14.1,12.2,12,15.4z M8.6,12c-1.1-0.7-2.3-1.3-3.6-1.6
  	C6.3,10.7,7.5,11.3,8.6,12z M19,10.4c-1.3,0.3-2.5,0.9-3.6,1.6C16.5,11.3,17.7,10.7,19,10.4z"
  />
</svg>
`;

exports[`Icon srollLeft still renders old renamed icons 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15.4,16.6L10.8,12l4.6-4.6L14,6l-6,6l6,6L15.4,16.6z"
  />
</svg>
`;

exports[`Icon star renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,1.54L14.55,9.6,23,9.53l-6.87,4.91,2.67,8-6.8-5-6.8,5,2.67-8L1,9.53,9.45,9.6Z"
  />
</svg>
`;

exports[`Icon starHalf renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,17.44l-6.8,5,2.67-8L1,9.53,9.45,9.6,12,1.54v15.9Z"
  />
</svg>
`;

exports[`Icon success renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 20 20"
  width={24}
>
  <path
    d="M8,15,3,10,4.41,8.59,8,12.17l7.59-7.59L17,6ZM10,0A10,10,0,1,0,20,10,10,10,0,0,0,10,0Z"
  />
</svg>
`;

exports[`Icon swap renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M16,17v-7h-2v7h-3l4,4l4-4H16z M9,3L5,7h3v7h2V7h3L9,3z"
  />
</svg>
`;

exports[`Icon thumbsDown renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15,3H6C5.2,3,4.5,3.5,4.2,4.2l-3,7.1C1,11.5,1,11.7,1,12v1.9l0,0L1,14c0,1.1,0.9,2,2,2h6.3l-0.9,4.6l0,0.3
  	c0,0.4,0.2,0.8,0.4,1.1L9.8,23l6.6-6.6C16.8,16,17,15.6,17,15V5C17,3.9,16.1,3,15,3z M19,3v12h4V3H19z"
  />
</svg>
`;

exports[`Icon thumbsUp renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 22 20"
  width={24}
>
  <path
    d="M22,9a2,2,0,0,0-2-2H13.69l1-4.57,0-.32A1.51,1.51,0,0,0,14.23,1L13.17,0,6.59,6.59A2,2,0,0,0,6,8V18a2,2,0,0,0,2,2h9a2,2,0,0,0,1.84-1.22l3-7.05A2,2,0,0,0,22,11V9.09h0ZM0,20H4V8H0Z"
  />
</svg>
`;

exports[`Icon trendingUp renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M16,6l2.3,2.3l-4.9,4.9l-4-4L2,16.6L3.4,18l6-6l4,4l6.3-6.3L22,12V6H16z"
  />
</svg>
`;

exports[`Icon tune renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3,17v2h6v-2H3z M3,5v2h10V5H3z M13,21v-2h8v-2h-8v-2h-2v6H13z M7,9v2H3v2h4v2h2V9H7z M21,13v-2H11v2H21z M15,9
  	h2V7h4V5h-4V3h-2V9z"
  />
</svg>
`;

exports[`Icon unlock renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18,8.5c1.1,0,2,0.9,2,2v10c0,1.1-0.9,2-2,2H6c-1.1,0-2-0.9-2-2v-10c0-1.1,0.9-2,2-2h9.1v-2
  	c0-1.7-1.4-3.1-3.1-3.1S8.9,4.8,8.9,6.5H7c0-2.8,2.2-5,5-5s5,2.2,5,5v2H18z M12,17.5c1.1,0,2-0.9,2-2s-0.9-2-2-2s-2,0.9-2,2
  	S10.9,17.5,12,17.5z"
  />
</svg>
`;

exports[`Icon user renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,12c2.2,0,4-1.8,4-4s-1.8-4-4-4S8,5.8,8,8S9.8,12,12,12z M12,14c-2.7,0-8,1.3-8,4v2h16v-2
  	C20,15.3,14.7,14,12,14z"
  />
</svg>
`;

exports[`Icon warning renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 20 20"
  width={24}
>
  <path
    d="M10,0A10,10,0,1,0,20,10,10,10,0,0,0,10,0Zm1,11H9V5h2Zm0,4H9V13h2Z"
  />
</svg>
`;

exports[`Icon web renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M15,18H4
  	v-4h11V18z M15,13H4V9h11V13z M20,18h-4V9h4V18z"
  />
</svg>
`;

exports[`Icon wifi renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M1,9l2,2c5-5,13-5,18,0l2-2C16.9,2.9,7.1,2.9,1,9z M9,17l3,3l3-3C13.4,15.3,10.7,15.3,9,17z
  	 M5,13l2,2c2.8-2.8,7.2-2.8,10,0l2-2C15.1,9.1,8.9,9.1,5,13z"
  />
</svg>
`;

exports[`Icon zoomOut renders 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15,3l2.3,2.3l-2.9,2.9l1.4,1.4l2.9-2.9L21,9V3H15z M3,9l2.3-2.3l2.9,2.9l1.4-1.4L6.7,5.3L9,3H3V9z M9,21
  	l-2.3-2.3l2.9-2.9l-1.4-1.4l-2.9,2.9L3,15v6H9z M21,15l-2.3,2.3l-2.9-2.9l-1.4,1.4l2.9,2.9L15,21h6V15z"
  />
</svg>
`;
